Fix Account Manager promptText overflow and Updated welcomeView

--- a/src/main/resources/owlplug.css
+++ b/src/main/resources/owlplug.css
@@ -125,6 +125,10 @@ JFXComboBox{
 	-fx-text-fill: white ;
 }
 
+#accountComboBox {
+	-fx-prompt-text-fill: transparent;
+}
+
 JFXCheckBox {
      -fx-text-fill: white; 
 }
